# vistrack

./: CONTRIBUTING.md  LICENSE  README.md  TESTING.md  mkdocs.yml  pyproject.toml  test_output.txt
.github/workflows/: ci.yml  lint.yml
demos/3d_track/: Dockerfile  run_gpu.sh
demos/3d_track/src/: demo.py  utils.py
demos/alphapose/: Dockerfile  run_gpu.sh  writer.py
demos/camera_motion/: run_gpu.sh
demos/camera_motion/src/: demo.py
demos/colab/: demo.py  draw.py  requirements.txt  yolo.py
demos/detectron2/: Dockerfile  run_gpu.sh
demos/detectron2/src/: demo.py
demos/keypoints_bounding_boxes/: Dockerfile  run_gpu.sh
demos/keypoints_bounding_boxes/src/: demo.py
demos/mmdetection/: Dockerfile  mmdetection_cars.py  run_gpu.sh
demos/mmdetection/src/: demo.py
demos/motmetrics4norfair/: Dockerfile  README.md  run.sh
demos/motmetrics4norfair/src/: motmetrics4bytetrack.py  motmetrics4norfair.py  motmetrics4norfair_xyah.py
demos/openpose/: Dockerfile  run_gpu.sh
demos/openpose/src/: demo.py
demos/profiling/: Dockerfile  run_gpu.sh
demos/profiling/src/: demo.py  utils.py
demos/reid/: Dockerfile  run.sh
demos/reid/src/: demo.py  utils.py  video_generator.py
demos/sahi/: Dockerfile  run.sh
demos/sahi/src/: demo.py
demos/yolo_nas/: Dockerfile  README.md  run_gpu.sh
demos/yolo_nas/src/: demo.py
demos/yolopv2/: requirements.txt  run_gpu.sh
demos/yolopv2/src/: demo.py  utils.py
demos/yolov4/: Dockerfile  run_gpu.sh
demos/yolov4/src/: demo.py
demos/yolov5/: Dockerfile  run_gpu.sh
demos/yolov5/src/: demo.py
demos/yolov7/: Dockerfile  run_gpu.sh
demos/yolov7/src/: demo.py
docs/: deploy_docs.py  getting_started.md
docs/reference/: camera_motion.md  distances.md  drawing.md  filter.md  index.md  metrics.md  tracker.md  utils.md  video.md
tests/: README.md  __init__.py  benchmark.py  conftest.py  download_mot.py  evaluate.py  mot_loader.py  mot_metrics.py  requirements.txt  test_distances.py  test_drawing.py  test_tracker.py
vistrack/: __init__.py  camera_motion.py  distances.py  filter.py  metrics.py  tracker.py  utils.py  video.py
vistrack/drawing/: absolute_grid.py  color.py  draw_boxes.py  draw_points.py  drawer.py  fixed_camera.py  path.py
